--- a/public/css/stil.css
+++ b/public/css/stil.css
@@ -56,4 +56,10 @@ a {
 
 #pomoc {
   font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+  }
+ #seznam-uporabnikov div {
+    cursor: pointer;
+ }
+  #seznam-uporabnikov div:hover {
+   background-color: #ddd;
+ }
